file(GLOB SOURCE_ZFILE "*.cpp")
file(GLOB SOURCE_LZ4 "lz4/lz4.c")
file(GLOB SOURCE_CRC32 "crc32/crc32c.cpp")

set (CMAKE_CXX_STANDARD 17)
add_library(crc32_lib ${SOURCE_CRC32})
target_compile_options(crc32_lib PUBLIC -msse4.2 -mcrc32)

if(ENABLE_DSA OR ENABLE_ISAL)
    add_subdirectory(thirdparty)
    add_dependencies(crc32_lib thirdparty_lib)
    target_link_directories(crc32_lib PUBLIC ${LIBRARY_OUTPUT_PATH})
    target_include_directories(crc32_lib PUBLIC ${LIBRARY_OUTPUT_PATH}/include)
    if(ENABLE_DSA)
        target_link_libraries(crc32_lib -lpci -ldmlhl -ldl)
        target_compile_definitions(crc32_lib PUBLIC -DENABLE_DSA)
    endif()
    if(ENABLE_ISAL)
        target_compile_options(crc32_lib PUBLIC -mavx512f)
        target_link_libraries(crc32_lib -lisal)
        target_compile_definitions(crc32_lib PUBLIC -DENABLE_ISAL)
    endif()
endif()
set (CMAKE_CXX_STANDARD 14)

add_library(zfile_lib STATIC  ${SOURCE_ZFILE} ${SOURCE_LZ4})
target_link_libraries(zfile_lib crc32_lib)
target_compile_options(zfile_lib PUBLIC -msse4.2 -mcrc32)

if (BUILD_TESTING)
    add_subdirectory(test)
endif ()
